@@ -1,31 +1,22 @@
 package com.example.mcatest.application.similarProducts.find;
 
+import com.example.mcatest.application.similarProducts.find.dto.ProductDetail;
 import com.example.mcatest.application.similarProducts.find.dto.SimilarProducts;
-import com.example.mcatest.configuration.SimilarProductsServerProperties;
+import com.example.mcatest.microservices.McaMicroservice.McaMicroservice;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-import org.springframework.web.client.RestTemplate;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
-import java.util.Objects;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class SimilarProductsFinder {
-
-    private final SimilarProductsServerProperties serverProperties;
-    private final RestTemplate restTemplate;
+    private final McaMicroservice mcaMicroservice;
 
     public SimilarProducts getSimilarProducts(String productId){
-        List<Integer> similarProductIds =
-        Arrays.stream(Objects.requireNonNull(restTemplate.getForObject(
-                String.format("%s/product/%s/similarids", serverProperties.getMcaMicroservice(), productId),
-                int[].class
-        ))).boxed().toList();
-
-        System.out.println(similarProductIds);
-        return SimilarProducts.builder().build();
+        List<Integer> similarProductIds = mcaMicroservice.getMcaSimilarProducts(productId);
+        List<ProductDetail> productDetailList = similarProductIds.stream().map(id->mcaMicroservice.getMcaProductDetail(String.valueOf(id))).collect(Collectors.toList());
+        return SimilarProducts.builder().productDetailList(productDetailList).build();
     }
 }
